--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+	<!-- HEADER -->
 	<header>
 		<nav>
 			<button class="open-menu">
@@ -26,14 +27,15 @@
 			</ul>
 		</nav>
 	</header>
-
+	<!-- MAIN -->
 	<main>
+		<!-- LANDING -->
 		<section id="home">
 			<div class="line"></div>
 			<h1>f.<span class="bold">vacotti</span></h1>
 			<p>//cv + portfolio</p>
 		</section>
-
+		<!-- SOBRE MÍ -->
 		<section id="about">
 			<article class="about-data">
 				<h2>sobre mí.</h2>
@@ -47,14 +49,15 @@
 				</p>
 			</article>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-
+		<!-- FORMACIÓN -->
 		<section id="formacion">
 			<article>
 				<h2>formación.</h2>
+				<!-- LÍNEA -->
 				<div class="timeline">
 					<ul>
 						<li>
@@ -94,6 +97,7 @@
 						</li>
 					</ul>
 				</div>
+				<!-- LÍNEA P/ CELULAR -->
 				<div class="timeline_2">
 					<ul>
 						<li>
@@ -130,11 +134,11 @@
 				</div>
 			</article>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-
+		<!-- TRABAJOS -->
 		<section id="work">
 			<h2>trabajos.</h2>
 			<div class="work-container">
@@ -143,11 +147,11 @@
 				<a href="./pages/lettering.html">lettering.</a>
 			</div>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-
+		<!-- CONTACTO -->
 		<section id="contacto">
 			<h2>contáctame.</h2>
 			<div class="form-container">
@@ -172,25 +176,24 @@
 						<input class="send" type="submit" value="enviar">
 					</form>
 				</div>
+				<!-- VÍAS ALTERNATIVAS -->
 				<div class="contacto-other">
 					<h3>vías alternativas.</h3>
 					<ul>
 						<li><a href="tel:5411441000093" target="_blank" class="fa-brands fa-whatsapp"></a></li>
 						<li><a href="https://t.me/fvacotti" target="_blank" class="fa-brands fa-telegram"></a></li>
-						<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 						<li><a href="https://www.linkedin.com/in/facundo-vacotti-876a5919b" target="_blank" class="fa-brands fa-linkedin-in"></a></li>
 						<li><a href="mailto:fvacotti@outlook.com" target="_blank" class="fa-sharp fa-solid fa-envelope"></a></li>
 					</ul>
 				</div>
 			</div>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
-
 	</main>
-
+	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
@@ -199,7 +202,7 @@
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
 		</ul>
-
+		<!-- REDES SOCIALES -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -208,13 +211,13 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-
+	<!-- BOTÓN SUBIR -->
 	<button class="btn-up" id="btn-up">
 		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
 	</button>
 
+	<!-- SCRIPT -->
 	<script src="js/main.js"></script>
-	
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
