--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+	<!-- HEADER -->
 	<header>
 		<nav>
 			<button class="open-menu">
@@ -24,8 +25,9 @@
 			</ul>
 		</nav>
 	</header>
-
+	<!-- MAIN -->
 	<main>
+		<!-- PRESENTACIÓN -->
 		<section id="present-design">
 			<div class="line"></div>
 			<h2>diseño editorial.</h2>
@@ -34,7 +36,7 @@
 				El principal objetivo de éste es crear un diseño que resulte atractivo y funcional para el lector; consiguiendo una armonía perfecta entre forma y contenido. Otorgando de este modo una calidad estilística a la publicación y una buena imagen de la misma al cliente.
 			</p>
 		</section>
-
+		<!-- GALERÍA -->
 		<section id="gallery">
 			<article class="gallery-section">
 				<h3>folleto + packaging.
@@ -47,9 +49,9 @@
 					<div class="gallery-item" data-index="3"><img src="../img/galeria/img-15.jpg" alt=""></div>
 				</div>
 			</article>
-
+			<!-- DIVISIÓN -->
 			<div class="line"></div>
-
+			<!-- GALERÍA -->
 			<article class="gallery-section">
 				<h3>rediseño de escudo + equipación.
 					<br><br>
@@ -65,12 +67,12 @@
 				</div>
 			</article>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-
+	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
@@ -79,7 +81,7 @@
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
 		</ul>
-
+		<!-- REDES SOCIALES -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -88,14 +90,14 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-
+	<!-- BOTÓN SUBIR -->
 	<button class="btn-up" id="btn-up">
 		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
 	</button>
 
+	<!-- SCRIPT -->
 	<script src="../js/main.js"></script>
 	<script src="../js/galeria.js"></script>
-	
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
