--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+	<!-- HEADER -->
 	<header>
 		<nav>
 			<button class="open-menu">
@@ -24,8 +25,9 @@
 			</ul>
 		</nav>
 	</header>
-
+	<!-- MAIN -->
 	<main>
+		<!-- PRESENTACIÓN -->
 		<section id="present-design">
 			<div class="line"></div>
 			<h2>lettering.</h2>
@@ -34,7 +36,7 @@
 				Las letras se consideran una forma de arte donde cada letra de una frase o cita actúa como una ilustración. Cada letra se crea con atención a los detalles y tiene un papel único dentro de una composición.
 			</p>
 		</section>
-
+		<!-- GALERÍA -->
 		<section id="gallery">
 			<article class="gallery-section">
 				<h3>lettering + editorial + intervención.
@@ -50,9 +52,9 @@
 					<div class="gallery-item" data-index="6"><img src="../img/galeria/img-21.jpg" alt=""></div>
 				</div>
 			</article>
-
+			<!-- DIVISIÓN -->
 			<div class="line"></div>
-
+			<!-- GALERÍA -->
 			<article class="gallery-section">
 				<h3>rediseño de escudo + equipación.
 					<br><br>
@@ -68,12 +70,12 @@
 				</div>
 			</article>
 		</section>
-
+		<!-- DIVISIÓN -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-
+	<!-- FOOTER -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer_title">
@@ -82,7 +84,7 @@
 			<li>diseñador gráfico</li>
 			<li>front-end developer</li>
 		</ul>
-
+		<!-- REDES SOCIALES -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -91,14 +93,14 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-
+	<!-- BOTÓN SUBIR -->
 	<button class="btn-up" id="btn-up">
 		<a href="#"><i class="fa-solid fa-chevron-up"></i></a>
 	</button>
 
+	<!-- SCRIPT -->
 	<script src="../js/main.js"></script>
-	<script src="../js/galeria.js"></script>
-	
+	<script src="../js/galeria.js"></script>	
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
 </html>
