--- a/pages/branding.html
+++ b/pages/branding.html
@@ -47,9 +47,9 @@
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/img-01.png" alt=""></div>
 					<div class="gallery-item" data-index="2"><img src="../img/galeria/img-02.png" alt=""></div>
 					<div class="gallery-item" data-index="3"><img src="../img/galeria/img-03.png" alt=""></div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/img-04.jpg" alt=""></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/img-05.jpg" alt=""></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/img-06.jpg" alt=""></div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/img-04.png" alt=""></div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/img-05.png" alt=""></div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/img-06.png" alt=""></div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
