--- a/pages/branding.html
+++ b/pages/branding.html
@@ -64,9 +64,9 @@
 					<div class="gallery-item" data-index="7"><img src="../img/galeria/img-07.png" alt=""></div>
 					<div class="gallery-item" data-index="8"><img src="../img/galeria/img-08.png" alt=""></div>
 					<div class="gallery-item" data-index="9"><img src="../img/galeria/img-09.png" alt=""></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/img-10.jpg" alt=""></div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/img-11.jpg" alt=""></div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/img-12.jpg" alt=""></div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/img-10.png" alt=""></div>
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/img-11.png" alt=""></div>
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/img-12.png" alt=""></div>
 				</div>
 			</article>
 		</section>
