--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -44,9 +44,9 @@
 					<span class="bold">// huerta urbana.</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/img-13.jpg" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/img-14.jpg" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/img-15.jpg" alt=""></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img_01.jpg" alt=""></div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img_02.jpg" alt=""></div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img_03.jpg" alt=""></div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
