--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -44,26 +44,26 @@
 					<span class="bold">// huerta urbana.</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img_01.jpg" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img_02.jpg" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img_03.jpg" alt=""></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-01.jpg" alt=""></div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-02.jpg" alt=""></div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-03.jpg" alt=""></div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
 			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
-				<h3>rediseño de escudo + equipación.
+				<h3>proyecto editorial.
 					<br><br>
-					<span class="bold">// rc deportivo</span>
+					<span class="bold">// "un mundo feliz", aldous huxley</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/img-07.png" alt=""></div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/img-08.png" alt=""></div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/img-09.png" alt=""></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/img-10.jpg" alt=""></div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/img-11.jpg" alt=""></div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/img-12.jpg" alt=""></div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-04.jpg" alt=""></div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-05.jpg" alt=""></div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-06.jpg" alt=""></div>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-07.jpg" alt=""></div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-08.jpg" alt=""></div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-09.jpg" alt=""></div>
 				</div>
 			</article>
 		</section>
