--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -44,12 +44,12 @@
 					<span class="bold">// real.</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/img-16.jpg" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/img-17.jpg" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/img-18.jpg" alt=""></div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/img-19.jpg" alt=""></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/img-20.jpg" alt=""></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/img-21.jpg" alt=""></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt=""></div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt=""></div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt=""></div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt=""></div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt=""></div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt=""></div>
 				</div>
 			</article>
 		</section>
