correcciones y agrego trabajo

--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 	<!-- HEADER -->
 	<header>
@@ -31,22 +33,56 @@
 		<section id="present-design">
 			<div class="line"></div>
 			<h2>diseño editorial.</h2>
-			<p>El <span class="bold">diseño editorial</span> es la rama del diseño gráfico que se encarga de la maquetación y composición de todo tipo de publicaciones como libros, revistas, periódicos, etc.
+			<p>El <span class="bold">diseño editorial</span> es la rama del diseño gráfico que se encarga de la
+				maquetación y composición de todo tipo de publicaciones como libros, revistas, periódicos, etc.
 				<br><br>
-				El principal objetivo de éste es crear un diseño que resulte atractivo y funcional para el lector; consiguiendo una armonía perfecta entre forma y contenido. Otorgando de este modo una calidad estilística a la publicación y una buena imagen de la misma al cliente.
+				El principal objetivo de éste es crear un diseño que resulte atractivo y funcional para el lector;
+				consiguiendo una armonía perfecta entre forma y contenido. Otorgando de este modo una calidad
+				estilística a la publicación y una buena imagen de la misma al cliente.
 			</p>
 		</section>
 		<!-- GALERÍA -->
 		<section id="gallery">
+			<!-- GALERÍA -->
+			<article class="gallery-section">
+				<h3>proyecto editorial.
+					<br><br>
+					<span class="bold">// "hiroshige"</span>
+				</h3>
+				<div class="gallery-container">
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-10.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-11.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-12.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-13.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-14.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-15.jpg" alt="">		
+					</div>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-16.jpg" alt="">		
+					</div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-17.jpg" alt="">		
+					</div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-18.jpg" alt="">		
+					</div>
+				</div>
+			</article>
+			<!-- GALERÍA -->
 			<article class="gallery-section">
 				<h3>folleto + packaging.
 					<br><br>
 					<span class="bold">// huerta urbana.</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-01.jpg" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-02.jpg" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-03.jpg" alt=""></div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-01.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/editorial/img-02.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/editorial/img-03.jpg" alt="">
+					</div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
@@ -58,12 +94,18 @@
 					<span class="bold">// "un mundo feliz", aldous huxley</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-04.jpg" alt=""></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-05.jpg" alt=""></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-06.jpg" alt=""></div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-07.jpg" alt=""></div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-08.jpg" alt=""></div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-09.jpg" alt=""></div>
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-04.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/editorial/img-05.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-06.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/editorial/img-07.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/editorial/img-08.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-09.jpg" alt="">
+					</div>
 				</div>
 			</article>
 		</section>
@@ -85,7 +127,7 @@
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
-			<li><a href="https://www.instagram.com/fvacotti" class="fa-brands fa-instagram"></a></li>
+			<li><a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a></li>
 			<li><a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-twitter"></a></li>
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
@@ -100,4 +142,5 @@
 	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
