--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
-			<li><a href="https://www.instagram.com/fvacotti" class="fa-brands fa-instagram"></a></li>
+			<li><a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a></li>
 			<li><a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-twitter"></a></li>
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
