--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -47,7 +47,7 @@
 			<article class="gallery-section">
 				<h3>proyecto editorial.
 					<br><br>
-					<span class="bold">// "hiroshige"</span>
+					<span class="bold">// "hiroshige".</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-10.jpg" alt="">
