agrego línea divisoria que faltó

--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -60,16 +60,18 @@
 					</div>
 					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-14.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-15.jpg" alt="">		
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-15.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-16.jpg" alt="">		
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-16.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-17.jpg" alt="">		
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-17.jpg" alt="">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-18.jpg" alt="">		
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-18.jpg" alt="">
 					</div>
 				</div>
 			</article>
+			<!-- DIVISIÓN -->
+			<div class="line"></div>
 			<!-- GALERÍA -->
 			<article class="gallery-section">
 				<h3>folleto + packaging.
