--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">2022-(en curso)</h4>
+								<h4 class="date">2022</h4>
 								<p>Curso de <span class="bold">inglés</span> (nivel 2) brindado por el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">2022-(en curso)</h4>
+								<h4 class="date">2022</h4>
 								<p>Curso de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Tecnológica Nacional (UTN).
 								</p>
 							</div>
