--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">2022</h4>
-								<p>Curso de <span class="bold">inglés</span> (nivel 2) brindado por el Centro Universitario de Idiomas (CUI).
+								<h4 class="date">dic-2022</h4>
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER), del Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación.
 								</p>
 							</div>
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">2022</h4>
-								<p>Curso de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> "BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad Tecnológica Nacional (UTN).
+								<h4 class="date">dic-2022</h4>
+								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN) completando 56 horas de formación.
 								</p>
 							</div>
 						</li>
@@ -115,19 +115,22 @@
 						<li>
 							<div>
 								<h4>2019-(en curso)</h4>
-								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa).</p>
+								<p>Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa).
+								</p>
 							</div>
 						</li>
 						<li>
 							<div>
-								<h4>2022</h4>
-								<p>Curso de <span class="bold">inglés</span> (nivel 2) brindado por el Centro Universitario de Idiomas (CUI).</p>
+								<h4>diciembre-2022</h4>
+								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER), del Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación.
+								</p>
 							</div>
 						</li>
 						<li>
 							<div>
-								<h4>2022</h4>
-								<p>Curso de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).</p>
+								<h4>diciembre-2022</h4>
+								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN) completando 56 horas de formación.
+								</p>
 							</div>
 						</li>
 					</ul>
