--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				<h2>sobre mí.</h2>
 				<p><span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
 				<br><br>
-				Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora (Buenos Aires, Argentina) y me actualmente estoy en proceso de convertirme en <span class="bold">diseñador gráfico</span>.
+				Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 23 años, resido en Lomas de Zamora (Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span class="bold">diseñador gráfico</span>.
 				<br><br>
-				Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y COmunicación Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos para continuar aprendiendo y especializándomeen diversos rubros como por ejemplo el de programación web.
+				Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación web.
 				<br><br>
 				Dentro de la esfera del diseño me apasionan por sobre todo el mundo del branding, la tipografía y el diseño editorial
 				</p>
@@ -69,7 +69,7 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">2018/-2019</h4>
+								<h4 class="date">2018-2019</h4>
 								<p>Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad Nacional de Lanús (UNLa).
 								</p>
 							</div>
@@ -91,14 +91,14 @@
 						<li>
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
-								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN) completando 56 horas de formación.
+								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
 					</ul>
 				</div>
 				<!-- LÍNEA P/ CELULAR -->
-				<div class="timeline_2">
+				<div class="timeline_mobile">
 					<ul>
 						<li>
 							<div>
@@ -121,15 +121,15 @@
 						</li>
 						<li>
 							<div>
-								<h4>diciembre-2022</h4>
+								<h4>dic-2022</h4>
 								<p>Curso bimestral de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER), del Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación de la Nación.
 								</p>
 							</div>
 						</li>
 						<li>
 							<div>
-								<h4>diciembre-2022</h4>
-								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN) completando 56 horas de formación.
+								<h4>dic-2022</h4>
+								<p>Curso bimestral de <span class="bold">programación web inicial</span> / <span class="bold">front-end developer</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
 								</p>
 							</div>
 						</li>
