--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
 	<!-- HEADER -->
 	<header>
 		<nav>
-			<button class="open-menu">
-				<img src="./img/hamburg.svg" alt="">
-			</button>
 			<ul class="nav-menu">
-				<button class="close-menu">
-					<img src="./img/close.svg" alt="">
-				</button>
-				<li><a href="#home" class="selected">home</a></li>
-				<li><a href="#about">sobre mi</a></li>
-				<li><a href="#formacion">formación</a></li>
-				<li><a href="#work">trabajos</a></li>
-				<li><a href="#contacto">contacto</a></li>
+				<li>
+					<a href="#home" class="selected nav-link" >home</a>
+				</li>
+				<li>
+					<a href="#about" class="nav-link">sobre mí</a>
+				</li>
+				<li>
+					<a href="#formacion" class="nav-link">formación</a>
+				</li>
+				<li>
+					<a href="#work" class="nav-link">trabajos</a>
+				</li>
+				<li>
+					<a href="#contacto" class="nav-link">contacto</a>
+				</li>
 			</ul>
+			<div class="hamburger">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</div>
 		</nav>
 	</header>
 	<!-- MAIN -->
