paso nuevo header

--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -12,17 +12,28 @@
 	<!-- HEADER -->
 	<header>
 		<nav>
-			<button class="open-menu">
-				<img src="../img/hamburg.svg" alt="">
-			</button>
 			<ul class="nav-menu">
-				<button class="close-menu">
-					<img src="../img/close.svg" alt="">
-				</button>
-				<li><a href="../index.html">home</a></li>
-				<li><a href="../pages/branding.html">branding</a></li>
-				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li>
+					<a href="#home" class="selected nav-link" >home</a>
+				</li>
+				<li>
+					<a href="#about" class="nav-link">sobre mí</a>
+				</li>
+				<li>
+					<a href="#formacion" class="nav-link">formación</a>
+				</li>
+				<li>
+					<a href="#work" class="nav-link">trabajos</a>
+				</li>
+				<li>
+					<a href="#contacto" class="nav-link">contacto</a>
+				</li>
 			</ul>
+			<div class="hamburger">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</div>
 		</nav>
 	</header>
 	<!-- MAIN -->
