--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -15,21 +15,9 @@
 	<header>
 		<nav>
 			<ul class="nav-menu">
-				<li>
-					<a href="#home" class="selected nav-link" >home</a>
-				</li>
-				<li>
-					<a href="#about" class="nav-link">sobre mí</a>
-				</li>
-				<li>
-					<a href="#formacion" class="nav-link">formación</a>
-				</li>
-				<li>
-					<a href="#work" class="nav-link">trabajos</a>
-				</li>
-				<li>
-					<a href="#contacto" class="nav-link">contacto</a>
-				</li>
+				<li><a href="../index.html">home</a></li>
+				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
