--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,26 +9,15 @@
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 	<!-- HEADER -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
-				<li>
-					<a href="#home" class="selected nav-link" >home</a>
-				</li>
-				<li>
-					<a href="#about" class="nav-link">sobre mí</a>
-				</li>
-				<li>
-					<a href="#formacion" class="nav-link">formación</a>
-				</li>
-				<li>
-					<a href="#work" class="nav-link">trabajos</a>
-				</li>
-				<li>
-					<a href="#contacto" class="nav-link">contacto</a>
-				</li>
+				<li><a href="../index.html">home</a></li>
+				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
@@ -42,9 +32,12 @@
 		<section id="present-design">
 			<div class="line"></div>
 			<h2>lettering.</h2>
-			<p>El <span class="bold">lettering</span> es un término general que cubre el arte de "dibujar" letras en lugar de simplemente escribirlas.
+			<p>El <span class="bold">lettering</span> es un término general que cubre el arte de "dibujar" letras en
+				lugar de simplemente escribirlas.
 				<br><br>
-				Las letras se consideran una forma de arte donde cada letra de una frase o cita actúa como una ilustración. Cada letra se crea con atención a los detalles y tiene un papel único dentro de una composición.
+				Las letras se consideran una forma de arte donde cada letra de una frase o cita actúa como una
+				ilustración. Cada letra se crea con atención a los detalles y tiene un papel único dentro de una
+				composición.
 			</p>
 		</section>
 		<!-- GALERÍA -->
@@ -55,12 +48,18 @@
 					<span class="bold">// real.</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt=""></div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt=""></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt=""></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt=""></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt="">
+					</div>
 				</div>
 			</article>
 		</section>
@@ -94,7 +93,8 @@
 
 	<!-- SCRIPT -->
 	<script src="../js/main.js"></script>
-	<script src="../js/galeria.js"></script>	
+	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
