--- a/pages/branding.html
+++ b/pages/branding.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,26 +9,15 @@
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 	<!-- HEADER -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
-				<li>
-					<a href="#home" class="selected nav-link" >home</a>
-				</li>
-				<li>
-					<a href="#about" class="nav-link">sobre mí</a>
-				</li>
-				<li>
-					<a href="#formacion" class="nav-link">formación</a>
-				</li>
-				<li>
-					<a href="#work" class="nav-link">trabajos</a>
-				</li>
-				<li>
-					<a href="#contacto" class="nav-link">contacto</a>
-				</li>
+				<li><a href="../index.html">home</a></li>
+				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
@@ -42,9 +32,12 @@
 		<section id="present-design">
 			<div class="line"></div>
 			<h2>branding.</h2>
-			<p>El <span class="bold">branding</span> está conformado por un conjunto de acciones relacionadas con el posicionamiento, el propósito y los valores de una marca.
+			<p>El <span class="bold">branding</span> está conformado por un conjunto de acciones relacionadas con el
+				posicionamiento, el propósito y los valores de una marca.
 				<br><br>
-				Su objetivo es crear conexiones conscientes e inconscientes con el público para influir en sus decisiones de compra. En otras palabras, el branding se centra en hacer conocida y deseada una marca, así como en ejercer una imagen positiva en la mente y el corazón de los consumidores.
+				Su objetivo es crear conexiones conscientes e inconscientes con el público para influir en sus
+				decisiones de compra. En otras palabras, el branding se centra en hacer conocida y deseada una marca,
+				así como en ejercer una imagen positiva en la mente y el corazón de los consumidores.
 			</p>
 		</section>
 		<!-- GALERÍA -->
@@ -75,9 +68,12 @@
 					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt=""></div>
 					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-08.png" alt=""></div>
 					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-09.png" alt=""></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png" alt=""></div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png" alt=""></div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png" alt=""></div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png" alt="">
+					</div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
@@ -89,17 +85,26 @@
 					<span class="bold">// jj.oo. roma 2032</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt=""></div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png" alt=""></div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png" alt=""></div>
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png" alt=""></div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png" alt=""></div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png" alt=""></div>
-					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg" alt=""></div>
-					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg" alt=""></div>
-					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg" alt=""></div>
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png" alt="">
+					</div>
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg" alt="">
+					</div>
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg" alt="">
+					</div>
 				</div>
-			</article>			
+			</article>
 		</section>
 		<!-- DIVISIÓN -->
 		<div class="line-container">
@@ -134,4 +139,5 @@
 	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
