--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -16,8 +16,8 @@
 		<nav>
 			<ul class="nav-menu">
 				<li><a href="../index.html">home</a></li>
-				<li><a href="../pages/editorial.html">editorial</a></li>
-				<li><a href="../pages/lettering.html">lettering</a></li>
+				<li><a href="../pages/branding.html">editorial</a></li>
+				<li><a href="../pages/editorial.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
 				<span class="bar"></span>
