--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class="nav-menu">
 				<li><a href="../index.html">home</a></li>
-				<li><a href="../pages/editorial.html">editorial</a></li>
+				<li><a href="../pages/branding.html">branding/a></li>
 				<li><a href="../pages/lettering.html">lettering</a></li>
 			</ul>
 			<div class="hamburger">
